# vortex

./: .gitignore  .gitmodules  Build.bat  Build.sh  CMakeLists.txt  README.md  SetupBuild.bat  SetupBuild.sh
assets/models/: testModel.mtl
engine/: CMakeLists.txt
engine/include/vortex/: audio.h  components.h  ecs.h  types.h  vortex.h
engine/shaders/: environment_sphere.frag.glsl  material.frag.glsl
engine/src/: vortex.c  vortex.h
engine/src/audio/: audio.c  audio.h  globals.c  globals.h
engine/src/ecs/: builtin.c  builtin.h  ecs.c  globals.c  globals.h
engine/src/input/: input.c  input.h
engine/src/render/: globals.c  globals.h  init.c  mesh.c  mesh.h  render.c  render.h  shader.c  shader.h  texture.c  types.h  util.c
example/: CMakeLists.txt
example/assets/models/: testModel.mtl
example/src/: main.c
shaders/: environment_sphere.frag.glsl  environment_sphere.vert.glsl  material.frag.glsl  triangle.frag.glsl  triangle.vert.glsl
src/: main.c  vortex.h
src/audio/: audio.c  audio.h  types.h
src/ecs/: builtin.c  builtin.h  ecs.c  ecs.h  globals.c  globals.h  types.h
src/input/: input.c  input.h
src/render/: globals.c  globals.h  init.c  init.h  mesh.c  mesh.h  render.c  render.h  shader.c  shader.h  texture.c  texture.h  types.h  util.c  util.h
